@@ -1,19 +1,0 @@
-dist: bionic
-language: python
-python:
-  - 3.5
-  - 3.6
-  - 3.7
-  - 3.8
-
-install:
-    pip install -r test-requirements.txt
-
-before_script:
-  - rm -rf build
-
-script:
-  - make lint && tox
-
-after_success:
-  - coveralls
