@@ -5,29 +5,16 @@
 
 [tox]
 envlist =
-    py3{5,6,7}-django20,
-    py3{5,6,7}-django21,
-    py3{5,6,7,9}-django22,
-    py3{6,7,8,9}-django30,
     py3{6,7,8,9}-django31,
     py3{6,7,8,9}-django32,
+    py3{8,9,10}-django40,
+skip_missing_interpreters=True
 
 [testenv]
 commands =
   coverage run --source=registration setup.py test
 deps =
   -rtest-requirements.txt
-  django20: Django>=2.0,<2.1
-  django21: Django>=2.1,<2.2
-  django22: Django>=2.2a1,<3.0
-  django30: Django>=3.0,<3.1
   django31: Django>=3.1,<3.2
   django32: Django>=3.2,<3.3
-
-[travis]
-python =
-  3.5: py35
-  3.6: py36
-  3.7: py37
-  3.8: py38
-  3.9: py39
+  django40: Django>=3.2,<4.0
